Kipi-plugins 1.2.0 - Release date: XX/XX/2010
------------------------------------------------------------------------

NEW FEATURES:

PicasaWebExport : Tool dialog redesigned with same layout than Flickr, Facebook, etc.
HTMLExport      : Show screenshot alongside theme description.
PiwigoExport    : New tool to export images to Piwigo server (aka PhpWebGallery).
HTMLExport      : Get metadata from image files and new detailed theme

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 225001 : GPSSync         : Google map is empty.
002 ==> 225162 : PicasaWebExport : Picasaweb export no progress bar.
003 ==> 225164 : PicasaWebExport : Picasaweb export waiting mouse cursor without ending.
004 ==> 203541 : PicasaWebExport : Select images to upload.
005 ==> 225316 : General         : ExpoBlend won't compile even with dependencies all right.
006 ==> 225396 : SendImages      : "Mozilla" MUA option is broken.
007 ==> 223492 : HtmlExport      : Show screenshot alongside theme description.
008 ==> 225407 : DNGConverter    : Dngconverter fix endian detection [patch].
009 ==> 225161 : PicasaWebExport : Picasaweb export does not export photo geotag.
010 ==> 225665 : PicasaWebExport : digiKam crashed when cancelling transfer to Picasa.
011 ==> 225646 : PicasaWebExport : Picasaweb does not export movie.
012 ==> 196593 : PicasaWebExport : EXIF Geotags not recognised by Picasa
013 ==> 226799 : Libkdcraw       : Libkdcraw should use all CPU cores when converting images.
014 ==> 224872 : PiwigoExport    : Export plugin for Piwigo.
015 ==> 226916 : HTMLExport	 : Get metadata from image files and new detailed theme.
016 ==> 
